fix(z-align): correct z-align problems with new background

--- a/components/globals/animated-background.module.scss
+++ b/components/globals/animated-background.module.scss
@@ -16,7 +16,6 @@ $totalFastBlocks: 20;
     border: solid var(--color-2-transparent);
     border-radius: 5px;
     bottom: -200px;
-    z-index: 1000;
   }
 
   // Slow blocks
