--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,7 +75,7 @@ h1 {
 section {
   display: flex;
   flex-direction: column;
-  z-index: 3;
+  z-index: 5;
 }
 
 button {
